@@ -1,10 +1,9 @@
-// Copyright (c) 2019, 2022, Oracle and/or its affiliates.
+// Copyright (c) 2019, 2023, Oracle and/or its affiliates.
 // Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.
 
 package oracle.kubernetes.operator.utils;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import com.google.gson.Gson;
 import com.google.gson.JsonElement;
@@ -26,7 +25,7 @@ public class PatchUtils {
   public static List<JsonObject> toKubernetesPatch(JsonPatch jsonPatch) {
     return jsonPatch.toJsonArray().stream()
         .map(PatchUtils::toJsonObject)
-        .collect(Collectors.toList());
+        .toList();
   }
 
   private static JsonObject toJsonObject(JsonValue value) {
